# liquid-hardware

./: README.md  cabal.project  liquid-hardware.cabal
src/: NandComputer.hs
