cabal-version: 3.0

name: liquid-hardware
version: 0.1.0.0
author: Rose Kunkel
extra-source-files:
  README.md

common shared
  build-depends:
    liquid-base ^>= 4.14
  default-language: Haskell2010
  ghc-options: -Wall

common lh
  build-depends:
    liquidhaskell == 0.8.10.1
  ghc-options: -fplugin=LiquidHaskell

library
  import: shared, lh
  hs-source-dirs: src
  exposed-modules:
    NandComputer
